--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,15 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+fp-lib-table
+sym-lib-table
 *.net
 *.dsn
 *.ses
+*.gbr
+*.gbrjob
+*.drl
+*.ps
 
 # LTSpice
 *.op
