--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/MDLSynth/untracked/*
+
 # KiCad
 *.000
 *.bak
@@ -11,9 +13,9 @@ _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
-fp-info-cache
-fp-lib-table
-sym-lib-table
+*fp-info-cache*
+*fp-lib-table*
+*sym-lib-table*
 *.net
 *.dsn
 *.ses
